order & customorder end

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/order/order.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ko.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/auth/profile.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
@@ -49,15 +50,14 @@
         스토어:
         <select id="storeSelect" required>
             <option value="">스토어 선택</option>
-            <option value="1">스토어 1</option>
-            <option value="2">스토어 2</option>
         </select>
     </label>
-    <input type="hidden" id="store_latitude">
-    <input type="hidden" id="store_longitude"><br/>
+    <input type="hidden" id="storeLatitude">
+    <input type="hidden" id="storeLongitude"><br/>
 
+    <p>예약은 현재시간 기준 1시간 이후부터 가능합니다.</p>
     <label>예약 시간 (선택사항):
-        <input type="datetime-local" id="reservationDate" name="reservationDate" placeholder="예약을 원하시면 입력해주세요.">
+        <input type="text" id="reservationDate" name="reservationDate" placeholder="예약을 원하시면 입력해주세요.">
     </label><br/>
 
 </div>
