--- a/src/main/resources/templates/delivery/delivery-list.html
+++ b/src/main/resources/templates/delivery/delivery-list.html
@@ -24,6 +24,7 @@
             <span id="delivery-count">(0)</span>
         </h1>
         <div class="btn-group">
+            <button id="backToHome" class="btn" type="button" onclick="location.href='/'">메인 화면</button>
             <button id="refresh-btn" class="btn">🔄새로고침</button>
         </div>
         <div>
