--- a/src/main/resources/templates/store/store-order-list.html
+++ b/src/main/resources/templates/store/store-order-list.html
@@ -31,7 +31,7 @@
     <div id="board">
         <!-- 상태 탭 -->
         <ul id="status-tabs" class="tabs">
-            <li data-status="PAYMENT_COMPLETED" class="active">배달 요청</li>
+            <li data-status="PAYMENT_COMPLETED" class="active">결제완료</li>
             <li data-status="ORDER_CONFIRMED">주문수락</li>
             <li data-status="ORDER_COOKING">조리중</li>
             <li data-status="ORDER_DELIVERING">배달중</li>
