--- a/src/main/resources/templates/delivery/delivery-list.html
+++ b/src/main/resources/templates/delivery/delivery-list.html
@@ -6,10 +6,13 @@
 
     <!-- jQuery & 공통 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
 
     <!-- 주문 목록 전용 스크립트 -->
     <script th:src="@{/js/delivery/deliveryList.js}"></script>
+    <script th:src="@{/js/delivery/deliveryLocation.js}"></script>
 
     <!-- 공용 CSS 스타일 -->
     <link th:href="@{/css/delivery/deliveryList.css}" rel="stylesheet"/>
@@ -57,6 +60,8 @@
         </table>
     </div>
 </div>
-
+<script>
+    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+</script>
 </body>
 </html>
