--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -19,6 +19,7 @@
         <div class="form-group">
             <label for="user_id">아이디</label>
             <input type="text" id="user_id" placeholder="아이디를 입력하세요" required>
+            <button id="id_validation">중복체크</button>
         </div>
 
         <div class="form-group">
