--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -26,8 +26,9 @@
       <th>지점명</th>
       <th>메뉴</th>
       <th>가격</th>
-      <th>수량</th>
+      <th>총 주문 수량</th>
       <th>주문 시간</th>
+      <th>예약 시간</th>
     </tr>
     </thead>
     <tbody>
@@ -35,5 +36,19 @@
     </tbody>
   </table>
 </main>
+<div id="order-modal-backdrop" class="modal-backdrop" style="display:none;"></div>
+
+<!-- 모달 본체 -->
+<div id="order-modal" class="modal" style="display:none;">
+  <div class="modal-content">
+    <span id="close-modal" class="modal-close">&times;</span>
+    <h2>주문 상세</h2>
+    <p>지점명: <span id="modal-store-name"></span></p>
+    <p class="modal-label">메뉴:</p>
+    <ul id="modal-items-list" class="order-item-list"></ul>
+    <p>총 금액: <span id="modal-total-price"></span>원</p>
+    <button id="cancel-order-btn" class="modal-btn">주문 취소</button>
+  </div>
+</div>
 </body>
 </html>
