--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -31,6 +31,7 @@
 </header>
 <main>
     <div>
+        <input id="hiddenUserUId" type="hidden">
         <input id="hiddenUserId" type="hidden">
         <input id="hiddenUserName" type="hidden">
         <input id="hiddenUserRole" type="hidden">
