--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -6,14 +6,19 @@
   <title>주문 내역</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" th:href="@{/css/order/orderDetail.css}">
-  <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/auth/profile.js}"></script>
   <script th:src="@{/js/findAddress.js}"></script>
   <script th:src="@{/js/store/storeList.js}"></script>
+  <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/order/orderDetail.js}"></script>
 </head>
 <body>
 <header>
+  <div class="top-nav">
+    <a href="/" class="nav-link">홈</a>
+    <a href="/cart" class="nav-link">장바구니</a>
+    <a href="#" id="logout-link" class="nav-link">로그아웃</a>
+  </div>
   <h1>주문 내역</h1>
 </header>
 
@@ -66,6 +71,9 @@
 
   </div>
 </div>
-
+<div id="loading-spinner" class="loading-spinner-wrapper" style="display: none;">
+  <div class="spinner"></div>
+  <div class="spinner-text">결제 취소 중입니다...</div>
+</div>
 </body>
 </html>
