--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -22,8 +22,14 @@
     <script th:src="@{/js/order/order.js}"></script>
 </head>
 <body>
-
-<h1>장바구니 주문</h1>
+<header>
+    <div class="top-nav">
+        <a href="/" class="nav-link">홈</a>
+        <a href="/cart" class="nav-link">장바구니</a>
+        <a href="#" id="logout-link" class="nav-link">로그아웃</a>
+    </div>
+    <h1>주문</h1>
+</header>
 
 <div id="cartContainer">
     <!-- JS로 장바구니 항목이 렌더링됨 -->
