--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -50,7 +50,7 @@
     <h2>주문 상세</h2>
     <p>지점명: <span id="modal-store-name"></span></p>
     <p class="modal-label">메뉴:</p>
-    <ul id="modal-items-list" class="order-item-list"></ul>
+    <div id="modal-items-list" class="kiosk-menu-list"></div>
     <p>총 금액: <span id="modal-total-price"></span>원</p>
 
     <button id="cancel-order-btn" class="modal-btn">주문 취소</button>
