order detail update

--- a/src/main/resources/templates/store/store-order-list.html
+++ b/src/main/resources/templates/store/store-order-list.html
@@ -6,6 +6,8 @@
 
     <!-- jQuery & 공통 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
+<!--    테스트 후 삭제하기-->
+    <script th:src="@{/js/order/orderCancel.js}"></script>
     <script th:src="@{/js/common.js}"></script>
 
     <!-- 주문 목록 전용 스크립트 -->
