--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -6,6 +6,7 @@
   <title>주문 내역</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" th:href="@{/css/order/orderDetail.css}">
+  <script th:src="@{/js/order/orderCancel.js}"></script>
   <script th:src="@{/js/auth/profile.js}"></script>
   <script th:src="@{/js/findAddress.js}"></script>
   <script th:src="@{/js/store/storeList.js}"></script>
