--- a/src/main/resources/templates/menu/cartList.html
+++ b/src/main/resources/templates/menu/cartList.html
@@ -7,6 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script src="/js/menu/cartList.js"></script>
+    <!-- 새로 만든 알러지 체크 스크립트 -->
+    <script src="/static/js/allergyCheck.js"></script>
     <link th:href="@{/css/menu/cartList.css}" rel="stylesheet">
 
 </head>
