--- a/src/main/resources/templates/menu/customCart.html
+++ b/src/main/resources/templates/menu/customCart.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/menu/customCart.js}"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script src="/js/allergyCheck.js"></script>
     <link th:href="@{/css/menu/menuAdmin.css}" rel="stylesheet">
 </head>
 <body>
