--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -9,54 +9,19 @@
     <!-- SweetAlert2 CDN 추가 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/menu/menuCustomerList.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/menu/menuCustomerList.css}">
 </head>
 <body>
 
 <!-- ✅ 헤더: 로그인 / 회원가입 영역 -->
-<header class="header">
-    <div class="header-left">
-        <a href="/" class="site-title">SAND-IT</a>
-    </div>
-    <div class="header-right">
-    </div>
-</header>
+<div th:replace="~{header :: header}"></div>
 
 <!-- ✅ 네비게이션 바 -->
-<nav class="navbar">
-    <div class="navbar-links">
-        <a href="/" class="nav-link">메뉴 소개</a>
-        <a href="/side" class="nav-link">사이드</a>
-        <a href="/" class="nav-link">이용 방법</a>
-        <a href="/" class="nav-link">새소식</a>
-        <a href="/" class="nav-link">SAND-IT</a>
-        <a href="/" class="nav-link">가맹점</a>
-        <a href="/" class="nav-link">온라인 주문</a>
-
-    </div>
-    <div class="management-section">
-        <div class="dropdown-delivery">
-            <a href="#" class="nav-link dropdown-toggle">DELIVERY</a>
-            <div class="dropdown-menu">
-                <a href="/delivery" class="dropdown-item">라이더 페이지</a>
-            </div>
-        </div>
-        <div class="dropdown-admin">
-            <a href="#" class="nav-link dropdown-toggle">ADMIN</a>
-            <div class="dropdown-menu">
-                <a href="/admin" class="dropdown-item">메뉴 관리 페이지</a>
-                <a href="/store/list" class="dropdown-item">지점 관리 페이지</a>
-                <a href="/store/order" class="dropdown-item">주문 관리 페이지</a>
-
-            </div>
-        </div>
-
-    </div>
-    </div>
-</nav>
+<div th:replace="~{navigation :: nav}"></div>
 
 <!-- ✅ 메인 타이틀 -->
 <h1 class="main-heading">ENJOY! SAND-IT!</h1>
@@ -68,6 +33,7 @@
         <a href="/customCart">
             <div class="menu-info">
                 <h2>커스텀 샌드위치 만들기</h2>
+                <img id="sandit-logo" src="https://himedia-sandis-20205.s3.ap-northeast-2.amazonaws.com/uploads/sandit.png" alt="sandit-logo"/>
                 <p>직접 재료를 골라 나만의 샌드위치를 만들어보세요!</p>
                 <a href="/customCart" class="add-to-cart-btn">바로가기</a>
             </div>
@@ -78,16 +44,7 @@
 </div>
 
 <!-- ✅ 푸터 추가 -->
-<footer class="footer">
-    <div class="footer-content">
-        <p>© 2025 Sand-it. All rights reserved.</p>
-        <div class="footer-links">
-            <a href="/about" class="footer-link">회사소개</a>
-            <a href="/terms" class="footer-link">이용약관</a>
-            <a href="/privacy" class="footer-link">개인정보처리방침</a>
-        </div>
-    </div>
-</footer>
+<div th:replace="~{footer :: footer}"></div>
 
 </body>
 </html>
