social order update

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -46,7 +46,7 @@
         <label for="mainAddress">주소</label>
         <div class="address-group">
             <input type="text" id="mainAddress" placeholder="주소를 입력하세요">
-            <button type="button" class="btn-primary" onclick="execDaumPostcode()">주소 검색</button>
+            <button type="button" class="btn-primary" id="find-address-btn">주소 검색</button>
         </div>
         <input type="hidden" id="deliveryDestinationLat">
         <input type="hidden" id="deliveryDestinationLan">
