email verify & phone update

--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -85,6 +85,13 @@
             </select>
         </div>
 
+        <div class="form-group" id="allergy-group" style="display: none;">
+            <label>알레르기 선택:</label>
+            <label><input type="checkbox" name="allergy" value="계란">계란</label>
+            <label><input type="checkbox" name="allergy" value="우유">우유</label>
+            <label><input type="checkbox" name="allergy" value="땅콩">땅콩</label>
+        </div>
+
         <button id="signup" type="button">회원가입</button>
     </div>
 </div>
