--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" th:href="@{/css/order/order.css}">
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
+    <script th:src="@{/js/order/orderCancel.js}"></script>
     <script th:src="@{/js/order/order.js}"></script>
 </head>
 <body>
